--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <h1>Wacana Ilmu Events</h1>
+            <h1>Dunia Ladang Akhirat</h1>
             <p>Your directory for insightful talks and gatherings.</p>
         </div>
     </header>
@@ -31,7 +31,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2025 Wacana Ilmu. All rights reserved.</p>
+            <p>2025 Dunia Ladang Akhirat.</p>
         </div>
     </footer>
 
