--- a/event-detail.html
+++ b/event-detail.html
@@ -67,7 +67,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2025 Wacana Ilmu. All rights reserved.</p>
+            <p>2025 Dunia Ladanag Akhirat.</p>
         </div>
     </footer>
 
